# WaveBlocks

./: README.md  main_LF_example.py  main_refocus_example.py  main_refocus_with_SLM_example copy.py  main_rotate_with_SLM_example.py  requirements.txt  setup.cfg  setup.py
WaveBlocksPytorch/: Camera.py  DiffractiveElement.py  Lens.py  MicroLensArray.py  Noise.py  OpticBlock.py  OpticConfig.py  PSF.py  WavePropagation.py  __init__.py  complexOps.py
config_files/: psfLFGT.h5  psf_20x_0.45NA.h5
example_scripts/: __init__.py
example_scripts/FLFMicroscope/: __init__.py  main_Coordinate_MLA_example.py  main_FIMic_example.py  main_PM_example.py  main_Periodic_MLA_example.py  main_RichardsonLucy_example.py  main_fourier_vs_conv.py  main_infrared_comparison.py
example_scripts/LFMicroscope/: main_PM_learning.py  main_net_example.py  main_refocus_example.py  main_rotate_with_SLM_example.py  main_sphere_sim.py
example_scripts/PolLFMicroscope/: main_Periodic_MLA_example.py
example_scripts/WFMicroscope/: __init__.py  main_refocus_example.py  main_scattering_psf_computation.py
example_scripts/data/: GT.tif
matlab/: testLF.m
matlab/util/: LFBuildGrid.m  LFBuildLensletGridModel.m  NormLFPSF.m  RelaySLMTest.m  calcPSF.m  calcPSFAllDepths.m  calcPSFwithPhaseMask.m  circ.m  computeForwardPatternsWaves.m  computeLensCenters.m  computePatchMask.m  computeResolution.m  fixMask.m  forwardProjectACC.m  fresnel2D.m  fresnel2DBilinear.m  getUsedCenters.m  imShift2.m  (+10 more)
microscopes/: microLFPM.py  microWithPropagation.py
tests/: test_main_scripts.py
waveblocks/: __init__.py
(+46 files in other folders)
