[metadata]
# replace with your username:
name = Waveblocks
version = 0.0.1
author = Josue Page Vizcaino, Josef Kamysek, Erik Riedel
author_email = pv.josue@gmail.com, josef@kamysek.com, erik.riedel@tum.de
description = Waveblocks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.lrz.de/IP/WaveBlocks
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8